--- a/package.json
+++ b/package.json
@@ -105,9 +105,9 @@
     "gulp": "4.0.2",
     "gulp-autoprefixer": "7.0.1",
     "gulp-clean-css": "4.3.0",
+    "gulp-dart-sass": "1.0.1",
     "gulp-nodemon": "2.5.0",
     "gulp-plumber": "1.2.1",
-    "gulp-sass": "4.0.2",
     "gulp-typescript": "6.0.0-alpha.1",
     "jest": "25.4.0",
     "npm-check-updates": "4.1.2",
