--- a/config/development.yml
+++ b/config/development.yml
@@ -1,9 +1,9 @@
 port: 3000
 redis:
-  host: 'localhost'
+  host: '127.0.0.1'
   port: 6380
 mysql:
-  host: 'localhost'
+  host: '127.0.0.1'
   port: 3310
   user: 'root'
   password: 'veau'
