--- a/package.json
+++ b/package.json
@@ -96,12 +96,13 @@
     "gulp-nodemon": "2.5.0",
     "gulp-plumber": "1.2.1",
     "gulp-typescript": "6.0.0-alpha.1",
-    "jest": "25.5.3",
+    "jest": "25.5.4",
     "npm-check-updates": "4.1.2",
     "rimraf": "3.0.2",
     "sinon": "9.0.2",
     "supertest": "4.0.2",
     "terser-webpack-plugin": "3.0.0",
+    "ts-config-webpack-plugin": "2.0.0",
     "ts-jest": "25.4.0",
     "ts-loader": "7.0.2",
     "typescript": "3.8.3",
