--- a/.eslintrc
+++ b/.eslintrc
@@ -288,14 +288,18 @@
     "@typescript-eslint/prefer-regexp-exec": "error",
     "@typescript-eslint/prefer-string-starts-ends-with": "error",
     "@typescript-eslint/promise-function-async": "off",
-    "@typescript-eslint/quotes": ["error", "single"],
+    "@typescript-eslint/quotes": [
+      "error",
+      "single"
+    ],
     "@typescript-eslint/require-array-sort-compare": "error",
     "@typescript-eslint/require-await": "error",
     "@typescript-eslint/restrict-plus-operands": "error",
     "@typescript-eslint/restrict-template-expressions": [
       "error",
       {
-        "allowNumber": true
+        "allowNumber": true,
+        "allowBoolean": true
       }
     ],
     "@typescript-eslint/return-await": "error",
