--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@handsontable/react": "3.1.3",
     "@material-ui/core": "4.9.13",
     "bourbon-neat": "4.0.0",
+    "class-transformer": "0.2.3",
+    "class-validator": "0.12.2",
     "compression": "1.7.4",
     "config": "3.3.1",
     "connect-redis": "4.0.4",
