--- a/src/Frontend/tsconfig.json
+++ b/src/Frontend/tsconfig.json
@@ -89,12 +89,12 @@
     /* Disallow inconsistently-cased references to the same file. */
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
+    "../../src/**/*ts",
+    "../../src/**/*tsx"
   ],
   "exclude": [
-    "dist",
-    "node_modules"
+    "../../dist",
+    "../../node_modules"
   ],
   "compileOnSave": false
 }
