type. module adopiton

--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "start": "pm2-runtime start pm2.yml",
+    "stop": "pm2-runtime stop pm2.yml",
     "build": "gulp build",
     "watch": "concurrently \"npm:watch:*\"",
     "watch:gulp": "gulp",
     "watch:webpack": "webpack-dev-server --hot --config webpack.development.config.js",
-    "start": "pm2-runtime start pm2.yml",
-    "stop": "pm2-runtime stop pm2.yml",
-    "test": "jest test --detectOpenHandles --coverage",
-    "lint": "eslint 'src/**/*.ts{,x}' --fix",
+    "fix": "concurrently \"npm:fix:*\"",
+    "test": "jest test --detectOpenHandles --coverage --config jest.cjs",
+    "lint": "eslint --fix 'src/**/*.{ts,tsx}'",
+    "fix:lint": "yarn lint",
+    "format": "prettier --write src/**/*.ts",
+    "fix:format": "yarn format",
     "update": "ncu -u && yarn install && yarn upgrade"
   },
   "engines": {
@@ -48,7 +52,7 @@
     "passport": "0.4.1",
     "passport-local": "1.0.0",
     "pm2": "4.4.0",
-    "publikum": "git+ssh://git@gitlab.com:jamashita/publikum.git#0.6.3",
+    "publikum": "git+ssh://git@gitlab.com:jamashita/publikum.git#0.7.0",
     "pug": "2.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
