--- a/tsconfig-fe.json
+++ b/tsconfig-fe.json
@@ -51,7 +51,7 @@
     /* Module Resolution Options */
     "moduleResolution": "node",
     /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    "baseUrl": "../../",
+    "baseUrl": ".",
     /* Base directory to resolve non-absolute module names. */
     // "paths": {},
     /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
@@ -89,12 +89,12 @@
     /* Disallow inconsistently-cased references to the same file. */
   },
   "include": [
-    "../../src/**/*ts",
-    "../../src/**/*tsx"
+    "src/**/*ts",
+    "src/**/*tsx"
   ],
   "exclude": [
-    "../../dist",
-    "../../node_modules"
+    "dist",
+    "node_modules"
   ],
   "compileOnSave": false
 }
