--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node": ">= 14.0.0",
     "npm": ">= 6.14.4"
   },
+  "sideEffects": false,
   "engineStrict": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.13.0",
