--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "veau",
   "version": "1.6.3",
-  "main": "dist/Server/Server.js",
+  "main": "./dist/Server/Server.js",
   "repository": {
     "type": "git",
     "url": "git@gitlab.com:jamashita/veau.git"
@@ -17,8 +17,8 @@
     "watch:gulp": "gulp",
     "watch:webpack": "webpack-dev-server --hot --config webpack.development.config.js",
     "test": "jest test --detectOpenHandles --coverage",
-    "lint": "eslint --fix 'src/**/*.{ts,tsx}'",
-    "format": "prettier --write 'src/**/*.{ts,tsx}'",
+    "lint": "eslint --fix './src/**/*.{ts,tsx}'",
+    "format": "prettier --write './src/**/*.{ts,tsx}'",
     "update": "ncu -u && yarn install && yarn upgrade"
   },
   "engines": {
