--- a/tsconfig-fe.json
+++ b/tsconfig-fe.json
@@ -63,8 +63,7 @@
     ],
     /* List of folders to include type definitions from. */
     "types": [
-      "node",
-      "jest"
+      "node"
     ],
     /* Type declaration files to be included in compilation. */
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
