--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
     "passport": "0.4.1",
     "passport-local": "1.0.0",
     "pm2": "4.4.0",
-    "publikum": "git+ssh://git@gitlab.com:jamashita/publikum.git#0.8.10",
+    "publikum": "file:publikum.tgz",
     "pug": "2.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-intl": "4.5.5",
+    "react-intl": "4.5.7",
     "react-redux": "7.2.0",
     "react-router-dom": "5.2.0",
     "recharts": "2.0.0-beta.3",
