--- a/package.json
+++ b/package.json
@@ -22,14 +22,32 @@
     "watch:gulp": "gulp",
     "watch:webpack": "webpack-dev-server --hot --config webpack.development.config.js",
     "test": "jest test --detectOpenHandles --coverage",
-    "lint": "eslint --fix './src/**/*.{ts,tsx}'",
-    "format": "prettier --write './src/**/*.{ts,tsx}'",
-    "update": "ncu -u && yarn install && yarn upgrade"
+    "lint": "eslint --fix 'src/**/*.{ts,tsx}'",
+    "format": "prettier --write 'src/**/*.{ts,tsx}'",
+    "update": "yarn update:upgrade && yarn update:install && yarn update:package",
+    "update:upgrade": "ncu --upgrade",
+    "update:install": "yarn install && yarn upgrade",
+    "update:package": "lerna run --parallel update"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.13.0",
     "@handsontable/react": "3.1.3",
     "@material-ui/core": "4.9.14",
+    "@publikum/ajax": "1.1.6",
+    "@publikum/cache": "1.1.6",
+    "@publikum/collection": "1.1.6",
+    "@publikum/digest": "1.1.6",
+    "@publikum/error": "1.1.6",
+    "@publikum/interface": "1.1.6",
+    "@publikum/json": "1.1.6",
+    "@publikum/monad": "1.1.6",
+    "@publikum/mysql": "1.1.6",
+    "@publikum/object": "1.1.6",
+    "@publikum/random": "1.1.6",
+    "@publikum/redis": "1.1.6",
+    "@publikum/type": "1.1.6",
+    "@publikum/uuid": "1.1.6",
+    "@publikum/zeit": "1.1.6",
     "bourbon-neat": "4.0.0",
     "class-transformer": "0.2.3",
     "class-validator": "0.12.2",
@@ -49,7 +67,6 @@
     "passport": "0.4.1",
     "passport-local": "1.0.0",
     "pm2": "4.4.0",
-    "publikum": "file:../publikum/publikum-v0.9.1.tgz",
     "pug": "2.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
