--- a/package.json
+++ b/package.json
@@ -32,22 +32,22 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.13.0",
     "@handsontable/react": "3.1.3",
+    "@jamashita/publikum-ajax": "1.1.15",
+    "@jamashita/publikum-cache": "1.1.15",
+    "@jamashita/publikum-collection": "1.1.15",
+    "@jamashita/publikum-digest": "1.1.15",
+    "@jamashita/publikum-error": "1.1.15",
+    "@jamashita/publikum-interface": "1.1.15",
+    "@jamashita/publikum-json": "1.1.15",
+    "@jamashita/publikum-monad": "1.1.15",
+    "@jamashita/publikum-mysql": "1.1.15",
+    "@jamashita/publikum-object": "1.1.15",
+    "@jamashita/publikum-random": "1.1.15",
+    "@jamashita/publikum-redis": "1.1.15",
+    "@jamashita/publikum-type": "1.1.15",
+    "@jamashita/publikum-uuid": "1.1.15",
+    "@jamashita/publikum-zeit": "1.1.15",
     "@material-ui/core": "4.10.0",
-    "@publikum/ajax": "1.1.6",
-    "@publikum/cache": "1.1.6",
-    "@publikum/collection": "1.1.6",
-    "@publikum/digest": "1.1.6",
-    "@publikum/error": "1.1.6",
-    "@publikum/interface": "1.1.6",
-    "@publikum/json": "1.1.6",
-    "@publikum/monad": "1.1.6",
-    "@publikum/mysql": "1.1.6",
-    "@publikum/object": "1.1.6",
-    "@publikum/random": "1.1.6",
-    "@publikum/redis": "1.1.6",
-    "@publikum/type": "1.1.6",
-    "@publikum/uuid": "1.1.6",
-    "@publikum/zeit": "1.1.6",
     "bourbon-neat": "4.0.0",
     "class-transformer": "0.2.3",
     "class-validator": "0.12.2",
@@ -70,7 +70,7 @@
     "pug": "3.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-intl": "4.6.2",
+    "react-intl": "4.6.3",
     "react-redux": "7.2.0",
     "react-router-dom": "5.2.0",
     "recharts": "2.0.0-beta.3",
@@ -102,7 +102,7 @@
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.5",
     "@types/recharts": "1.8.10",
-    "@types/redux-logger": "3.0.7",
+    "@types/redux-logger": "3.0.8",
     "@types/serve-favicon": "2.5.0",
     "@types/sinon": "9.0.4",
     "@types/superagent": "4.1.7",
@@ -127,7 +127,7 @@
     "gulp-typescript": "6.0.0-alpha.1",
     "husky": "4.2.5",
     "jest": "26.0.1",
-    "lint-staged": "10.2.6",
+    "lint-staged": "10.2.7",
     "npm-check-updates": "6.0.1",
     "prettier": "2.0.5",
     "rimraf": "3.0.2",
