--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "veau",
+  "name": "@jamashita/veau",
   "version": "1.6.3",
   "author": "jamashita <jamashita@arachnid.xyz>",
   "license": "MIT",
@@ -31,21 +31,21 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.13.0",
     "@handsontable/react": "3.1.3",
-    "@jamashita/publikum-ajax": "1.1.25",
-    "@jamashita/publikum-cache": "1.1.25",
-    "@jamashita/publikum-collection": "1.2.0",
-    "@jamashita/publikum-digest": "1.1.25",
-    "@jamashita/publikum-error": "1.1.25",
-    "@jamashita/publikum-interface": "1.1.25",
-    "@jamashita/publikum-json": "1.1.25",
-    "@jamashita/publikum-monad": "1.2.0",
-    "@jamashita/publikum-mysql": "1.1.25",
-    "@jamashita/publikum-object": "1.1.25",
-    "@jamashita/publikum-random": "1.1.25",
-    "@jamashita/publikum-redis": "1.1.25",
-    "@jamashita/publikum-type": "1.1.25",
-    "@jamashita/publikum-uuid": "1.1.25",
-    "@jamashita/publikum-zeit": "1.1.25",
+    "@jamashita/publikum-ajax": "1.5.0",
+    "@jamashita/publikum-cache": "1.5.0",
+    "@jamashita/publikum-collection": "1.5.1",
+    "@jamashita/publikum-digest": "1.5.1",
+    "@jamashita/publikum-error": "1.3.0",
+    "@jamashita/publikum-interface": "1.5.0",
+    "@jamashita/publikum-json": "1.5.0",
+    "@jamashita/publikum-monad": "1.5.1",
+    "@jamashita/publikum-mysql": "1.5.0",
+    "@jamashita/publikum-object": "1.5.0",
+    "@jamashita/publikum-random": "1.3.0",
+    "@jamashita/publikum-redis": "1.5.0",
+    "@jamashita/publikum-type": "1.5.0",
+    "@jamashita/publikum-uuid": "1.5.0",
+    "@jamashita/publikum-zeit": "1.5.0",
     "@material-ui/core": "4.10.1",
     "bourbon-neat": "4.0.0",
     "class-transformer": "0.2.3",
@@ -93,7 +93,7 @@
     "@types/helmet": "0.0.47",
     "@types/history": "4.7.6",
     "@types/jest": "25.2.3",
-    "@types/node": "14.0.11",
+    "@types/node": "14.0.12",
     "@types/passport": "1.0.3",
     "@types/passport-local": "1.0.33",
     "@types/react": "16.9.35",
@@ -107,13 +107,13 @@
     "@types/superagent": "4.1.7",
     "@types/supertest": "2.0.9",
     "@types/webpack": "4.41.17",
-    "@typescript-eslint/eslint-plugin": "3.1.0",
-    "@typescript-eslint/parser": "3.1.0",
-    "@typescript-eslint/typescript-estree": "3.1.0",
+    "@typescript-eslint/eslint-plugin": "3.2.0",
+    "@typescript-eslint/parser": "3.2.0",
+    "@typescript-eslint/typescript-estree": "3.2.0",
     "concurrently": "5.2.0",
     "eslint": "7.2.0",
     "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-import": "2.21.1",
     "eslint-plugin-jest": "23.13.2",
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-react": "7.20.0",
