--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "http-status": "1.4.2",
     "inversify": "5.0.1",
     "js-yaml": "3.14.0",
-    "log4js": "6.3.0",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
     "pm2": "4.4.0",
@@ -82,6 +81,7 @@
     "serve-favicon": "2.5.0",
     "source-map-support": "0.5.19",
     "superagent": "5.2.2",
+    "tslog": "2.2.0",
     "typesafe-actions": "5.1.0"
   },
   "devDependencies": {
