--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "stop": "pm2-runtime stop pm2.yml",
     "build": "gulp build",
     "watch": "concurrently \"npm:watch:*\"",
-    "watch:gulp": "gulp",
+    "watch:server": "ts-node-dev --respawn src/Server/Server.ts",
     "watch:webpack": "webpack-dev-server --hot --config webpack.development.config.js",
     "test": "jest test --detectOpenHandles --coverage",
     "lint": "eslint --fix 'src/**/*.{ts,tsx}'",
@@ -135,6 +135,7 @@
     "ts-config-webpack-plugin": "2.0.0",
     "ts-jest": "26.1.0",
     "ts-loader": "7.0.5",
+    "ts-node-dev": "1.0.0-pre.44",
     "typescript": "3.9.5",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11",
