--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "redux-logger": "3.0.6",
     "redux-observable": "1.2.0",
     "reflect-metadata": "0.1.13",
-    "routing-controllers": "0.8.1",
+    "routing-controllers": "0.9.0-alpha.3",
     "rxjs": "6.5.5",
     "serve-favicon": "2.5.0",
     "source-map-support": "0.5.19",
@@ -93,10 +93,10 @@
     "@types/helmet": "0.0.47",
     "@types/history": "4.7.6",
     "@types/jest": "26.0.0",
-    "@types/node": "14.0.12",
+    "@types/node": "14.0.13",
     "@types/passport": "1.0.3",
     "@types/passport-local": "1.0.33",
-    "@types/react": "16.9.35",
+    "@types/react": "16.9.36",
     "@types/react-dom": "16.9.8",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.5",
@@ -113,7 +113,7 @@
     "concurrently": "5.2.0",
     "eslint": "7.2.0",
     "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-import": "2.21.1",
+    "eslint-plugin-import": "2.21.2",
     "eslint-plugin-jest": "23.13.2",
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-react": "7.20.0",
@@ -127,7 +127,7 @@
     "husky": "4.2.5",
     "jest": "26.0.1",
     "lint-staged": "10.2.9",
-    "npm-check-updates": "7.0.0",
+    "npm-check-updates": "7.0.1",
     "prettier": "2.0.5",
     "rimraf": "3.0.2",
     "sinon": "9.0.2",
