--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@typescript-eslint/parser": "3.2.0",
     "@typescript-eslint/typescript-estree": "3.2.0",
     "concurrently": "5.2.0",
+    "css-loader": "3.5.3",
     "eslint": "7.2.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.21.2",
@@ -130,7 +131,9 @@
     "npm-check-updates": "7.0.1",
     "prettier": "2.0.5",
     "rimraf": "3.0.2",
+    "sass-loader": "8.0.2",
     "sinon": "9.0.2",
+    "style-loader": "1.2.1",
     "supertest": "4.0.2",
     "ts-config-webpack-plugin": "2.0.0",
     "ts-jest": "26.1.0",
