--- a/.eslintrc
+++ b/.eslintrc
@@ -135,7 +135,7 @@
     "no-confusing-arrow": "error",
     "no-console": "error",
     "no-constructor-return": "error",
-    "no-continue": "error",
+    "no-continue": "off",
     "no-div-regex": "error",
     "no-duplicate-imports": "error",
     "no-else-return": "error",
