--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,3 +1,7 @@
 {
-  'src/**/*.{ts,tsx}': 'eslint --fix --quiet'
+  "packages/**/src/**/*.{ts,tsx}": "eslint --fix --quiet",
+  "package.json": [
+    "sort-package-json",
+    "git add"
+  ]
 }
