--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -2,14 +2,11 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     /* Basic Options */
-    "module": "esnext",
+    "module": "commonjs",
     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
     "lib": [
-      "esnext",
-      "dom"
+      "es2020"
     ],
     /* Specify library files to be included in the compilation. */
-    "jsx": "react",
-    /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
   }
 }
