--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -2,11 +2,14 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     /* Basic Options */
-    "module": "commonjs",
+    "module": "es2020",
     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
     "lib": [
-      "esnext"
+      "es2020",
+      "dom"
     ],
     /* Specify library files to be included in the compilation. */
+    "jsx": "react",
+    /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
   }
 }
