--- a/package.json
+++ b/package.json
@@ -76,8 +76,7 @@
     "serve-favicon": "2.5.0",
     "source-map-support": "0.5.19",
     "superagent": "5.3.1",
-    "tslog": "2.6.1",
-    "typesafe-actions": "5.1.0"
+    "tslog": "2.6.1"
   },
   "devDependencies": {
     "@types/compression": "1.7.0",
