--- a/.eslintrc
+++ b/.eslintrc
@@ -402,7 +402,8 @@
           "camelCase",
           "PascalCase",
           "UPPER_CASE"
-        ]
+        ],
+        "leadingUnderscore": "allow"
       },
       {
         "selector": "memberLike",
