--- a/.eslintrc
+++ b/.eslintrc
@@ -137,6 +137,7 @@
     "no-constructor-return": "error",
     "no-continue": "off",
     "no-div-regex": "error",
+    "no-dupe-else-if": "error",
     "no-duplicate-imports": "error",
     "no-else-return": "error",
     "no-empty-function": "off",
@@ -144,12 +145,14 @@
     "no-eval": "error",
     "no-extend-native": "error",
     "no-extra-bind": "error",
+    "no-extra-boolean-cast": "error",
     "no-extra-label": "error",
     "no-extra-parens": "off",
     "no-floating-decimal": "error",
     "no-implicit-coercion": "error",
     "no-implicit-globals": "error",
     "no-implied-eval": "error",
+    "no-import-assign": "error",
     "no-inline-comments": "error",
     "no-invalid-this": "off",
     "no-irregular-whitespace": [
@@ -164,6 +167,7 @@
     "no-lone-blocks": "error",
     "no-lonely-if": "error",
     "no-loop-func": "error",
+    "no-loss-of-precision": "error",
     "no-magic-numbers": "off",
     "no-mixed-operators": "error",
     "no-mixed-requires": "error",
@@ -186,6 +190,7 @@
     "no-plusplus": "off",
     "no-process-env": "error",
     "no-process-exit": "error",
+    "no-promise-executor-return": "error",
     "no-proto": "error",
     "no-restricted-exports": "error",
     "no-restricted-globals": "error",
@@ -198,6 +203,7 @@
     "no-script-url": "error",
     "no-self-compare": "error",
     "no-sequences": "error",
+    "no-setter-return": "error",
     "no-shadow": "error",
     "no-spaced-func": "error",
     "no-sync": "error",
@@ -210,6 +216,7 @@
     "no-undefined": "off",
     "no-underscore-dangle": "error",
     "no-unmodified-loop-condition": "error",
+    "no-unreachable-loop": "error",
     "no-unneeded-ternary": "error",
     "no-unused-expressions": "off",
     "no-use-before-define": "off",
