--- a/.eslintrc
+++ b/.eslintrc
@@ -18,9 +18,7 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:jest/recommended",
-    "plugin:prettier/recommended",
-    "prettier/@typescript-eslint"
+    "plugin:jest/recommended"
   ],
   "env": {
     "browser": true,
@@ -790,7 +788,7 @@
       }
     ],
     "import/no-unresolved": "off",
-    "jest/no-test-callback": "off",
-    "prettier/prettier": "error"
+    "jest/no-jasmine-globals": "off",
+    "jest/no-test-callback": "off"
   }
 }
