--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "gulp build",
-    "format": "prettier --write 'src/**/*.{ts,tsx}'",
-    "lint": "eslint --fix 'src/**/*.{ts,tsx}'",
+    "format": "eslint --fix 'src/**/*.{ts,tsx}'",
     "start": "pm2-runtime start pm2.yml",
     "stop": "pm2-runtime stop pm2.yml",
     "test": "jest test --detectOpenHandles --coverage",
@@ -107,10 +106,8 @@
     "concurrently": "5.2.0",
     "css-loader": "3.6.0",
     "eslint": "7.5.0",
-    "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-jest": "23.18.0",
-    "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.20.3",
     "gulp": "4.0.2",
     "gulp-autoprefixer": "7.0.1",
@@ -123,7 +120,6 @@
     "jest": "26.1.0",
     "lint-staged": "10.2.11",
     "npm-check-updates": "7.0.2",
-    "prettier": "2.0.5",
     "rimraf": "3.0.2",
     "sass-loader": "9.0.2",
     "sinon": "9.0.2",
