--- a/.eslintrc
+++ b/.eslintrc
@@ -598,7 +598,7 @@
     "@typescript-eslint/typedef": [
       "error",
       {
-        "arrayDestructuring": true,
+        "arrayDestructuring": false,
         "arrowParameter": true,
         "memberVariableDeclaration": true,
         "objectDestructuring": false,
