--- a/package.json
+++ b/package.json
@@ -104,11 +104,11 @@
     "@typescript-eslint/parser": "3.7.1",
     "@typescript-eslint/typescript-estree": "3.7.1",
     "concurrently": "5.2.0",
-    "css-loader": "4.0.0",
     "eslint": "7.5.0",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-jest": "23.19.0",
     "eslint-plugin-react": "7.20.5",
+    "font-config-webpack-plugin": "2.0.0",
     "gulp": "4.0.2",
     "gulp-autoprefixer": "7.0.1",
     "gulp-clean-css": "4.3.0",
@@ -121,10 +121,9 @@
     "lint-staged": "10.2.11",
     "npm-check-updates": "7.0.2",
     "rimraf": "3.0.2",
-    "sass-loader": "9.0.2",
+    "scss-config-webpack-plugin": "2.0.0",
     "sinon": "9.0.2",
     "sort-package-json": "1.44.0",
-    "style-loader": "1.2.1",
     "supertest": "4.0.2",
     "ts-config-webpack-plugin": "2.0.0",
     "ts-jest": "26.1.4",
