--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -2,7 +2,11 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     /* Basic Options */
-    "module": "commonjs"
+    "module": "commonjs",
     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
+    "jsx": "react",
+    /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
+    "outDir": "./dist"
+    /* Redirect output structure to the directory. */
   }
 }
