--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "update:install": "yarn install && yarn upgrade",
     "update:upgrade": "ncu --upgrade",
     "watch": "concurrently \"npm:watch:*\"",
-    "watch:server": "NODE_ENV=development ts-node-dev --respawn src/Server/Server.ts",
+    "watch:server": "NODE_ENV=development ts-node-dev --respawn --transpile-only src/Server/Server.ts",
     "watch:webpack": "webpack-dev-server --hot --config webpack.development.config.js"
   },
   "dependencies": {
