cjs transpile errors resolved

--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -6,5 +6,8 @@
     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
     "outDir": "./dist"
     /* Redirect output structure to the directory. */
-  }
+  },
+  "exclude": [
+    "src/Frontend"
+  ]
 }
