--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,17 +1,22 @@
 name: 'Jest test'
 on:
-  push:
+  pull_request:
     branches:
       - 'develop'
+      - 'main'
 jobs:
   test:
     runs-on: 'ubuntu-latest'
     timeout-minutes: 20
     steps:
+      - name: 'Use node.js 14.5'
+        uses: 'actions/setup-node@v1'
+        with:
+          node-version: '14.5'
       - name: 'Checkout the repository'
         uses: 'actions/checkout@v2'
         with:
-          ref: 'main'
+          ref: '${{github.head_ref}}'
       - name: 'test'
         run: |
           yarn install --frozen-lockfile
