--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git@gitlab.com:jamashita/veau.git"
+    "url": "git@github.com:jamashita/veau.git"
   },
   "license": "MIT",
   "author": "jamashita <jamashita@arachnid.xyz>",
@@ -87,11 +87,11 @@
     "@types/express-session": "1.17.0",
     "@types/helmet": "0.0.48",
     "@types/history": "4.7.7",
-    "@types/jest": "26.0.10",
+    "@types/jest": "26.0.12",
     "@types/node": "14.6.2",
     "@types/passport": "1.0.4",
     "@types/passport-local": "1.0.33",
-    "@types/react": "16.9.48",
+    "@types/react": "16.9.49",
     "@types/react-dom": "16.9.8",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.5",
@@ -101,11 +101,11 @@
     "@types/sinon": "9.0.5",
     "@types/supertest": "2.0.10",
     "@types/webpack": "4.41.21",
-    "@typescript-eslint/eslint-plugin": "3.10.1",
-    "@typescript-eslint/parser": "3.10.1",
-    "@typescript-eslint/typescript-estree": "3.10.1",
+    "@typescript-eslint/eslint-plugin": "4.0.1",
+    "@typescript-eslint/parser": "4.0.1",
+    "@typescript-eslint/typescript-estree": "4.0.1",
     "concurrently": "5.3.0",
-    "eslint": "7.7.0",
+    "eslint": "7.8.0",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-jest": "23.20.0",
     "eslint-plugin-react": "7.20.6",
@@ -113,7 +113,7 @@
     "husky": "4.2.5",
     "jest": "26.4.2",
     "lint-staged": "10.2.13",
-    "npm-check-updates": "8.0.1",
+    "npm-check-updates": "8.0.2",
     "rimraf": "3.0.2",
     "scss-config-webpack-plugin": "2.0.0",
     "sinon": "9.0.3",
