--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "tslog": "2.7.1"
   },
   "devDependencies": {
+    "@jamashita/eslint-config": "1.1.0",
     "@types/compression": "1.7.0",
     "@types/config": "0.0.36",
     "@types/connect-redis": "0.0.14",
