--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "eslint": "7.8.1",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-jest": "24.0.0",
+    "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.6",
     "font-config-webpack-plugin": "2.0.0",
     "husky": "4.3.0",
