--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,7 @@ jobs:
         uses: 'actions/checkout@v2'
         with:
           ref: '${{github.head_ref}}'
-      - name: 'validate TS files'
-        run: |
-          yarn install --frozen-lockfile
-          yarn format
-          yarn test
+      - name: 'Install dependencies'
+          run: 'yarn install --frozen-lockfile'
+      - name: 'Run tests'
+        run: 'yarn test'
