--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "handsontable": "8.0.0",
     "helmet": "4.1.1",
     "history": "5.0.0",
-    "http-status": "1.4.2",
+    "http-status-codes": "2.1.3",
     "inversify": "5.0.1",
     "js-yaml": "3.14.0",
     "passport": "0.4.1",
