ci: 🎡 commitlint installed

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:esm": "webpack",
     "clean": "rimraf dist && rimraf coverage",
+    "commit": "git cz",
     "format": "eslint --fix 'src/**/*.{ts,tsx}'",
     "start": "pm2-runtime start pm2.yml",
     "stop": "pm2-runtime stop pm2.yml",
@@ -65,7 +66,7 @@
     "pug": "3.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-intl": "5.8.1",
+    "react-intl": "5.8.2",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
     "recharts": "2.0.0-beta.3",
@@ -79,7 +80,16 @@
     "tslog": "2.8.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "11.0.0",
+    "@commitlint/config-conventional": "11.0.0",
     "@jamashita/eslint-config": "1.1.5",
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/commit-analyzer": "8.0.1",
+    "@semantic-release/exec": "5.0.0",
+    "@semantic-release/git": "9.0.0",
+    "@semantic-release/github": "7.1.1",
+    "@semantic-release/npm": "7.0.6",
+    "@semantic-release/release-notes-generator": "9.0.1",
     "@types/compression": "1.7.0",
     "@types/config": "0.0.36",
     "@types/connect-redis": "0.0.14",
@@ -112,6 +122,7 @@
     "eslint-plugin-react": "7.20.6",
     "eslint-plugin-react-hooks": "4.1.2",
     "font-config-webpack-plugin": "2.0.0",
+    "git-cz": "4.7.1",
     "husky": "4.3.0",
     "jest": "26.4.2",
     "lint-staged": "10.4.0",
@@ -124,7 +135,7 @@
     "ts-config-webpack-plugin": "2.0.0",
     "ts-jest": "26.3.0",
     "ts-node-dev": "1.0.0-pre.62",
-    "typescript": "4.0.2",
+    "typescript": "4.0.3",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
