--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,15 +9,15 @@ jobs:
     runs-on: 'ubuntu-latest'
     timeout-minutes: 20
     steps:
-      - name: 'Use node.js 14.5'
+      - name: 'Use Node.js 14.5'
         uses: 'actions/setup-node@v1'
         with:
           node-version: '14.5'
       - name: 'Check out repository'
         uses: 'actions/checkout@v2'
         with:
-          ref: '${{github.head_ref}}'
+          fetch-depth: 0
       - name: 'Install dependencies'
           run: 'yarn install --frozen-lockfile'
-      - name: 'Run tests'
+      - name: 'Test'
         run: 'yarn test'
