--- a/.github/workflows/gcp-deploy.yml
+++ b/.github/workflows/gcp-deploy.yml
@@ -10,10 +10,14 @@ jobs:
     runs-on: 'ubuntu-latest'
     timeout-minutes: 20
     steps:
+      - name: 'Use Node.js 14.5'
+        uses: 'actions/setup-node@v1'
+        with:
+          node-version: '14.5'
       - name: 'Checkout the repository'
         uses: 'actions/checkout@v2'
         with:
-          ref: 'main'
+          fetch-depth: 0
       - name: 'GCP Authenticate'
         uses: 'GoogleCloudPlatform/github-actions/setup-gcloud@master'
         with:
