--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@jamashita/publikum-redis": "3.4.0",
     "@jamashita/publikum-type": "3.4.0",
     "@jamashita/publikum-uuid": "3.4.0",
+    "@jamashita/publikum-validation": "3.4.0",
     "@jamashita/publikum-zeit": "3.4.0",
     "@material-ui/core": "4.11.2",
     "bourbon-neat": "4.0.0",
