--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -54,11 +54,13 @@
     /* Report error when not all code paths in function return a value. */
     "noFallthroughCasesInSwitch": true,
     /* Report errors for fallthrough cases in switch statement. */
+    "noUncheckedIndexedAccess": true,
+    /* Include 'undefined' in index signature results */
 
     /* Module Resolution Options */
     "moduleResolution": "node",
     /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    "baseUrl": "src",
+    "baseUrl": "./",
     /* Base directory to resolve non-absolute module names. */
     "paths": {
       "@types/express": [
@@ -76,6 +78,7 @@
       "node",
       "jest"
     ],
+    /* Type declaration files to be included in compilation. */
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true,
     /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
@@ -101,7 +104,7 @@
     /* Disallow inconsistently-cased references to the same file. */
   },
   "include": [
-    "src/**/*"
+    "src/**/*.ts"
   ],
   "exclude": [
     "dist",
