--- a/package.json
+++ b/package.json
@@ -47,15 +47,15 @@
     "@jamashita/publikum-zeit": "3.11.0",
     "@material-ui/core": "4.11.3",
     "bourbon-neat": "4.0.0",
-    "class-transformer": "0.3.2",
+    "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
     "compression": "1.7.4",
     "config": "3.3.3",
-    "connect-redis": "5.0.0",
-    "connected-react-router": "6.8.0",
+    "connect-redis": "5.1.0",
+    "connected-react-router": "6.9.1",
     "express": "4.17.1",
     "express-session": "1.17.1",
-    "handsontable": "8.2.0",
+    "handsontable": "8.3.1",
     "helmet": "4.4.1",
     "history": "5.0.0",
     "http-status-codes": "2.1.4",
@@ -63,27 +63,27 @@
     "js-yaml": "4.0.0",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
-    "pm2": "4.5.1",
+    "pm2": "4.5.5",
     "pug": "3.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-intl": "5.10.16",
+    "react-intl": "5.13.1",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
-    "recharts": "2.0.3",
+    "recharts": "2.0.8",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
     "redux-observable": "1.2.0",
     "reflect-metadata": "0.1.13",
-    "routing-controllers": "0.9.0-alpha.6",
-    "rxjs": "6.6.3",
+    "routing-controllers": "0.9.0",
+    "rxjs": "6.6.6",
     "serve-favicon": "2.5.0",
-    "tslog": "3.1.0"
+    "tslog": "3.1.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "11.0.0",
-    "@commitlint/config-conventional": "11.0.0",
-    "@jamashita/eslint-config": "1.23.1",
+    "@commitlint/cli": "12.0.0",
+    "@commitlint/config-conventional": "12.0.0",
+    "@jamashita/eslint-config": "1.30.0",
     "@types/compression": "1.7.0",
     "@types/config": "0.0.38",
     "@types/connect-redis": "0.0.16",
@@ -92,11 +92,11 @@
     "@types/helmet": "0.0.48",
     "@types/history": "4.7.8",
     "@types/jest": "26.0.20",
-    "@types/node": "14.14.22",
-    "@types/passport": "1.0.5",
+    "@types/node": "14.14.31",
+    "@types/passport": "1.0.6",
     "@types/passport-local": "1.0.33",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.1",
     "@types/react-redux": "7.1.16",
     "@types/react-router-dom": "5.1.7",
     "@types/recharts": "1.8.19",
@@ -105,36 +105,36 @@
     "@types/sinon": "9.0.10",
     "@types/supertest": "2.0.10",
     "@types/webpack": "4.41.26",
-    "@typescript-eslint/eslint-plugin": "4.14.0",
-    "@typescript-eslint/parser": "4.14.0",
-    "@typescript-eslint/typescript-estree": "4.14.0",
-    "concurrently": "5.3.0",
-    "eslint": "7.18.0",
+    "@typescript-eslint/eslint-plugin": "4.15.2",
+    "@typescript-eslint/parser": "4.15.2",
+    "@typescript-eslint/typescript-estree": "4.15.2",
+    "concurrently": "6.0.0",
+    "eslint": "7.20.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jest": "24.1.3",
+    "eslint-plugin-jest": "24.1.5",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "font-config-webpack-plugin": "2.0.0",
     "git-cz": "4.7.6",
-    "husky": "4.3.8",
+    "husky": "5.1.1",
     "jest": "26.6.3",
-    "lint-staged": "10.5.3",
-    "npm-check-updates": "11.0.2",
+    "lint-staged": "10.5.4",
+    "npm-check-updates": "11.1.9",
     "rimraf": "3.0.2",
     "scss-config-webpack-plugin": "2.0.0",
     "sinon": "9.2.4",
-    "sort-package-json": "1.48.1",
-    "supertest": "6.0.1",
+    "sort-package-json": "1.49.0",
+    "supertest": "6.1.3",
     "ts-config-webpack-plugin": "2.0.0",
-    "ts-jest": "26.4.4",
-    "ts-node-dev": "1.1.1",
-    "typescript": "4.1.3",
-    "webpack": "5.17.0",
-    "webpack-cli": "4.4.0",
+    "ts-jest": "26.5.2",
+    "ts-node-dev": "1.1.6",
+    "typescript": "4.2.2",
+    "webpack": "5.24.2",
+    "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2",
-    "webpack-stream": "6.1.1"
+    "webpack-stream": "6.1.2"
   },
   "engines": {
     "node": ">= 14.5.0",
