--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -56,6 +56,8 @@
     /* Report errors for fallthrough cases in switch statement. */
     "noUncheckedIndexedAccess": true,
     /* Include 'undefined' in index signature results */
+    "noPropertyAccessFromIndexSignature": true,
+    /* Require undeclared properties from index signatures to use element accesses. */
 
     /* Module Resolution Options */
     "moduleResolution": "node",
