--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,17 +1,11 @@
-name: 'CI'
+name: 'Release'
 on:
-  pull_request_target:
+  push:
     branches:
-      - 'main'
-      - 'develop'
       - 'release'
-    types:
-      - 'assigned'
-      - 'opened'
-      - 'synchronize'
-      - 'reopened'
 jobs:
-  ci:
+  release:
+    if: '!contains(github.event.head_commit.message, ''skip ci'')'
     runs-on: 'ubuntu-latest'
     timeout-minutes: 15
     steps:
@@ -25,5 +19,10 @@ jobs:
         run: |
           yarn install --frozen-lockfile
           yarn setup
-      - name: 'Test'
-        run: 'yarn test'
+      - name: 'Compile'
+        run: 'yarn build'
+      - name: 'Publish to NPM'
+        run: 'yarn release'
+        env:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+          NPM_TOKEN: '${{ secrets.NPM_TOKEN }}'
