--- a/package.json
+++ b/package.json
@@ -29,22 +29,20 @@
     "@fortawesome/fontawesome-svg-core": "1.2.35",
     "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@handsontable/react": "5.0.0",
-    "@jamashita/publikum-ajax": "3.12.0",
-    "@jamashita/publikum-cache": "3.12.0",
-    "@jamashita/publikum-collection": "3.12.0",
-    "@jamashita/publikum-digest": "3.12.0",
-    "@jamashita/publikum-error": "3.12.0",
-    "@jamashita/publikum-interface": "3.12.0",
-    "@jamashita/publikum-json": "3.12.0",
-    "@jamashita/publikum-monad": "3.12.0",
-    "@jamashita/publikum-mysql": "3.12.0",
-    "@jamashita/publikum-object": "3.12.0",
-    "@jamashita/publikum-random": "3.12.0",
-    "@jamashita/publikum-redis": "3.12.0",
-    "@jamashita/publikum-type": "3.12.0",
-    "@jamashita/publikum-uuid": "3.12.0",
-    "@jamashita/publikum-validation": "3.12.0",
-    "@jamashita/publikum-zeit": "3.12.0",
+    "@jamashita/anden-error": "1.5.0",
+    "@jamashita/anden-object": "1.6.0",
+    "@jamashita/anden-type": "1.8.0",
+    "@jamashita/anden-uuid": "1.6.0",
+    "@jamashita/anden-zeit": "1.6.0",
+    "@jamashita/catacombe-fetch": "1.0.1",
+    "@jamashita/catacombe-heap": "1.0.0",
+    "@jamashita/catacombe-mysql": "1.0.0",
+    "@jamashita/catacombe-redis": "1.0.0",
+    "@jamashita/genitore-superposition": "1.2.0",
+    "@jamashita/lluvia-collection": "1.2.0",
+    "@jamashita/steckdose-digest": "1.0.0",
+    "@jamashita/steckdose-json": "1.0.1",
+    "@jamashita/steckdose-random": "1.0.0",
     "@material-ui/core": "4.11.3",
     "bourbon-neat": "4.0.0",
     "class-transformer": "0.4.0",
