--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "connected-react-router": "6.9.1",
     "express": "4.17.1",
     "express-session": "1.17.1",
+    "fastify": "3.15.1",
     "handsontable": "8.3.2",
     "helmet": "4.6.0",
     "history": "5.0.0",
@@ -61,6 +62,7 @@
     "js-yaml": "4.1.0",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
+    "pino": "6.11.3",
     "pm2": "4.5.6",
     "pug": "3.0.2",
     "react": "17.0.2",
@@ -75,8 +77,7 @@
     "reflect-metadata": "0.1.13",
     "routing-controllers": "0.9.0",
     "rxjs": "7.0.0",
-    "serve-favicon": "2.5.0",
-    "tslog": "3.2.0"
+    "serve-favicon": "2.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "12.1.1",
@@ -93,6 +94,7 @@
     "@types/node": "15.0.1",
     "@types/passport": "1.0.6",
     "@types/passport-local": "1.0.33",
+    "@types/pino": "6.3.8",
     "@types/react": "17.0.4",
     "@types/react-dom": "17.0.3",
     "@types/react-redux": "7.1.16",
