--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.35",
     "@fortawesome/free-solid-svg-icons": "5.15.3",
-    "@handsontable/react": "5.0.0",
+    "@handsontable/react": "8.4.0",
     "@jamashita/anden-error": "1.8.0",
     "@jamashita/anden-object": "1.8.0",
     "@jamashita/anden-type": "1.10.1",
@@ -46,6 +46,7 @@
     "@material-ui/core": "4.11.4",
     "@nestjs/common": "7.6.15",
     "@nestjs/core": "7.6.15",
+    "@nestjs/passport": "7.1.5",
     "@nestjs/platform-express": "7.6.15",
     "bourbon-neat": "4.0.0",
     "class-validator": "0.13.1",
@@ -54,7 +55,7 @@
     "connect-redis": "5.2.0",
     "connected-react-router": "6.9.1",
     "express-session": "1.17.1",
-    "handsontable": "8.3.2",
+    "handsontable": "8.4.0",
     "helmet": "4.6.0",
     "history": "5.0.0",
     "http-status-codes": "2.1.4",
@@ -67,7 +68,7 @@
     "pug": "3.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-intl": "5.17.4",
+    "react-intl": "5.17.5",
     "react-redux": "7.2.4",
     "react-router-dom": "5.2.0",
     "recharts": "2.0.9",
@@ -95,7 +96,7 @@
     "@types/passport": "1.0.6",
     "@types/passport-local": "1.0.33",
     "@types/react": "17.0.5",
-    "@types/react-dom": "17.0.3",
+    "@types/react-dom": "17.0.4",
     "@types/react-redux": "7.1.16",
     "@types/react-router-dom": "5.1.7",
     "@types/recharts": "1.8.19",
@@ -104,9 +105,6 @@
     "@types/sinon": "10.0.0",
     "@types/supertest": "2.0.11",
     "@types/webpack": "5.28.0",
-    "@typescript-eslint/eslint-plugin": "4.22.1",
-    "@typescript-eslint/parser": "4.22.1",
-    "@typescript-eslint/typescript-estree": "4.22.1",
     "concurrently": "6.1.0",
     "eslint": "7.26.0",
     "font-config-webpack-plugin": "2.0.2",
@@ -114,7 +112,7 @@
     "husky": "6.0.0",
     "jest": "26.6.3",
     "lint-staged": "11.0.0",
-    "npm-check-updates": "11.5.10",
+    "npm-check-updates": "11.5.11",
     "rimraf": "3.0.2",
     "scss-config-webpack-plugin": "2.0.2",
     "sinon": "10.0.0",
@@ -124,7 +122,7 @@
     "ts-jest": "26.5.6",
     "ts-node-dev": "1.1.6",
     "typescript": "4.2.4",
-    "webpack": "5.36.2",
+    "webpack": "5.37.0",
     "webpack-cli": "4.7.0",
     "webpack-dev-server": "3.11.2",
     "webpack-stream": "6.1.2"
