--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
     "@jamashita/catacombe-heap": "2.0.0",
     "@jamashita/catacombe-mysql": "2.0.0",
     "@jamashita/catacombe-redis": "2.0.0",
+    "@jamashita/genitore-schrodinger": "2.0.0",
+    "@jamashita/genitore-superposition": "2.0.0",
     "@jamashita/lluvia-collection": "2.1.0",
     "@jamashita/lluvia-project": "2.2.0",
     "@jamashita/lluvia-sequence": "2.2.0",
     "@jamashita/steckdose-digest": "2.0.0",
     "@jamashita/steckdose-json": "2.1.0",
+    "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
     "compression": "1.7.4",
     "config": "3.3.6",
@@ -57,13 +60,17 @@
     "passport-local": "1.0.0",
     "pm2": "5.1.0",
     "pug": "3.0.2",
+    "reflect-metadata": "0.1.13",
+    "routing-controllers": "0.9.0",
     "serve-favicon": "2.5.0",
     "tslog": "3.2.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "7.15.0",
+    "@babel/preset-env": "7.15.0",
     "@commitlint/cli": "13.1.0",
     "@commitlint/config-conventional": "13.1.0",
-    "@jamashita/eslint-plugin": "1.48.0",
+    "@jamashita/eslint-plugin": "1.49.0",
     "@types/compression": "1.7.1",
     "@types/config": "0.0.39",
     "@types/connect-redis": "0.0.17",
@@ -71,12 +78,13 @@
     "@types/express-session": "1.17.4",
     "@types/helmet": "4.0.0",
     "@types/jest": "26.0.24",
-    "@types/node": "16.4.10",
+    "@types/node": "16.4.12",
     "@types/passport": "1.0.7",
     "@types/passport-local": "1.0.34",
     "@types/serve-favicon": "2.5.3",
     "@types/sinon": "10.0.2",
     "@types/supertest": "2.0.11",
+    "babel-jest": "27.0.6",
     "concurrently": "6.2.0",
     "eslint": "7.32.0",
     "git-cz": "4.7.6",
