ci: 🎡 new workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,28 +4,23 @@ on:
     branches:
       - 'main'
       - 'develop'
-      - 'release'
     types:
-      - 'assigned'
       - 'opened'
-      - 'synchronize'
       - 'reopened'
+      - 'synchronize'
 jobs:
   ci:
     runs-on: 'ubuntu-latest'
-    timeout-minutes: 15
     steps:
+      - name: 'Check out repository'
+        uses: 'actions/checkout@v3'
+        with:
+          ref: '${{ github.event.pull_request.head.sha }}'
       - name: 'Use Node.js 16.0'
         uses: 'actions/setup-node@v2'
         with:
           node-version: '16.0'
-      - name: 'Check out repository'
-        uses: 'actions/checkout@v2'
-        with:
-          ref: '${{ github.event.pull_request.head.sha }}'
       - name: 'Set up'
-        run: |
-          yarn install --frozen-lockfile
-          yarn setup
+        run: 'yarn install --frozen-lockfile'
       - name: 'Test'
         run: 'yarn test'
